# freelancer-auto-message

./: .gitignore  .readthedocs.yaml  .~lock.Acessos Contas - Plataformas Freelancers.docx#  main.py  mkdocs.yml  pyproject.toml  requirements.txt
cray_freelas_bot/: database.py  main.py
cray_freelas_bot/common/: browser.py  driver.py  project.py
cray_freelas_bot/domain/: bot.py  browser.py  message_sent.py  models.py  repositories.py
cray_freelas_bot/exceptions/: nine_nine_freelas.py  project.py  widgets.py
cray_freelas_bot/models/: bot.py  message_sent.py
cray_freelas_bot/repositories/: bot.py  message_sent.py
cray_freelas_bot/use_cases/: nine_nine_freelas.py  workana.py
cray_freelas_bot/widgets/: bots_window.py  configuration_window.py  helpers.py  main_window.py  tables_models.py  threads.py
docs/: index.md
docs/api/: common.md  domain.md  index.md  use_cases.md
tests/test_common/: test_project.py
tests/test_gui/: test_main_window.py
tests/test_use_cases/: nine_nine_categories.json  test_nine_nine_freelas.py  test_workana.py
tests/test_use_cases/test_make_logins/: test_nine_nine_freelas.py  test_workana.py
tests/test_utils/: expected_spreadsheet.xlsx  result.xlsx  workana_categories.json
