[tool.poetry]
name = "cray-freelas-bot"
version = "0.1.0"
description = ""
authors = ["riguima <richard.alexsander.guima@gmail.com>"]
readme = "README.md"
packages = [{include = "cray_freelas_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.9.1"
webdriver-manager = "^3.8.6"
python-slugify = "^8.0.1"
httpx = "^0.24.1"
taskipy = "^1.11.0"
mkdocs = "^1.4.3"
blue = "^0.9.1"
isort = "^5.12.0"
mkdocs-material = "^9.1.14"
pytest-cov = "^4.0.0"
pandas = "^2.0.1"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
jedi = "^0.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
pre_test = "task lint"
test = "pytest -s -x --cov=cray_freelas_bot -vv"
post_test = "coverage html"
